Style: Add styles to the HTML file and Fix Linters Errors

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "abooks",
   "version": "1.0.0",
-  "description": "",
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,5 +22,259 @@
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-scss": "^3.21.0"
-  }
+  },
+  "dependencies": {
+    "acorn-jsx": "^5.3.2",
+    "acorn": "^8.8.1",
+    "argparse": "^2.0.1",
+    "arrify": "^1.0.1",
+    "ajv": "^8.11.2",
+    "autoprefixer": "^9.8.8",
+    "astral-regex": "^2.0.0",
+    "ansi-styles": "^4.3.0",
+    "bail": "^1.0.5",
+    "ansi-regex": "^5.0.1",
+    "braces": "^3.0.2",
+    "array-union": "^2.1.0",
+    "camelcase": "^5.3.1",
+    "brace-expansion": "^1.1.11",
+    "balanced-match": "^2.0.0",
+    "browserslist": "^4.21.4",
+    "caniuse-lite": "^1.0.30001434",
+    "callsites": "^3.1.0",
+    "camelcase-keys": "^6.2.2",
+    "character-entities": "^1.2.4",
+    "clone-regexp": "^2.2.0",
+    "concat-map": "^0.0.1",
+    "color-convert": "^2.0.1",
+    "chalk": "^4.1.2",
+    "color-name": "^1.1.4",
+    "character-entities-legacy": "^1.1.4",
+    "character-reference-invalid": "^1.1.4",
+    "decamelize": "^1.2.0",
+    "convert-source-map": "^1.9.0",
+    "cross-spawn": "^7.0.3",
+    "decamelize-keys": "^1.1.1",
+    "dir-glob": "^3.0.1",
+    "debug": "^4.3.4",
+    "cosmiconfig": "^7.1.0",
+    "deep-is": "^0.1.4",
+    "cssesc": "^3.0.0",
+    "dom-serializer": "^0.2.2",
+    "domelementtype": "^1.3.1",
+    "domutils": "^1.7.0",
+    "domhandler": "^2.4.2",
+    "entities": "^1.1.2",
+    "css-tree": "^1.1.3",
+    "doctrine": "^3.0.0",
+    "eslint-scope": "^7.1.1",
+    "electron-to-chromium": "^1.4.284",
+    "eslint-utils": "^3.0.0",
+    "escape-string-regexp": "^1.0.5",
+    "emoji-regex": "^8.0.0",
+    "eslint-visitor-keys": "^3.3.0",
+    "execall": "^2.0.0",
+    "estraverse": "^5.3.0",
+    "espree": "^9.4.1",
+    "esrecurse": "^4.3.0",
+    "extend": "^3.0.2",
+    "esquery": "^1.4.0",
+    "fastest-levenshtein": "^1.0.16",
+    "escalade": "^3.1.1",
+    "fast-glob": "^3.2.12",
+    "esutils": "^2.0.3",
+    "fast-levenshtein": "^2.0.6",
+    "fill-range": "^7.0.1",
+    "fast-deep-equal": "^3.1.3",
+    "find-up": "^4.1.0",
+    "fs.realpath": "^1.0.0",
+    "error-ex": "^1.3.2",
+    "function-bind": "^1.1.1",
+    "file-entry-cache": "^6.0.1",
+    "flatted": "^3.2.7",
+    "flat-cache": "^3.0.4",
+    "get-stdin": "^8.0.0",
+    "fast-json-stable-stringify": "^2.1.0",
+    "global-prefix": "^3.0.0",
+    "global-modules": "^2.0.0",
+    "glob-parent": "^5.1.2",
+    "glob": "^7.2.3",
+    "globjoin": "^0.1.4",
+    "gensync": "^1.0.0-beta.2",
+    "has": "^1.0.3",
+    "hard-rejection": "^2.1.0",
+    "fastq": "^1.13.0",
+    "globals": "^11.12.0",
+    "grapheme-splitter": "^1.0.4",
+    "htmlparser2": "^3.10.1",
+    "has-flag": "^4.0.0",
+    "import-lazy": "^4.0.0",
+    "globby": "^11.1.0",
+    "indent-string": "^4.0.0",
+    "hosted-git-info": "^4.1.0",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "ini": "^1.3.8",
+    "gonzales-pe": "^4.3.0",
+    "is-alphabetical": "^1.0.4",
+    "is-alphanumerical": "^1.0.4",
+    "html-tags": "^3.2.0",
+    "is-arrayish": "^0.2.1",
+    "import-fresh": "^3.3.0",
+    "is-decimal": "^1.0.4",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-glob": "^4.0.3",
+    "is-hexadecimal": "^1.0.4",
+    "is-number": "^7.0.0",
+    "is-plain-obj": "^1.1.0",
+    "is-core-module": "^2.11.0",
+    "is-regexp": "^2.1.0",
+    "imurmurhash": "^0.1.4",
+    "is-buffer": "^2.0.5",
+    "ignore": "^5.2.1",
+    "is-unicode-supported": "^0.1.0",
+    "is-typedarray": "^1.0.0",
+    "js-tokens": "^4.0.0",
+    "jsesc": "^2.5.2",
+    "isexe": "^2.0.0",
+    "json-stable-stringify-without-jsonify": "^1.0.1",
+    "kind-of": "^6.0.3",
+    "is-path-inside": "^3.0.3",
+    "json-parse-even-better-errors": "^2.3.1",
+    "js-sdsl": "^4.2.0",
+    "js-yaml": "^4.1.0",
+    "known-css-properties": "^0.21.0",
+    "json-schema-traverse": "^1.0.0",
+    "locate-path": "^5.0.0",
+    "lodash.truncate": "^4.4.2",
+    "longest-streak": "^2.0.4",
+    "lodash.merge": "^4.6.2",
+    "lodash": "^4.17.21",
+    "map-obj": "^4.3.0",
+    "log-symbols": "^4.1.0",
+    "levn": "^0.4.1",
+    "mdast-util-to-string": "^2.0.0",
+    "merge2": "^1.4.1",
+    "json5": "^2.2.1",
+    "mathml-tag-names": "^2.1.3",
+    "mdn-data": "^2.0.14",
+    "mdast-util-from-markdown": "^0.8.5",
+    "micromatch": "^4.0.5",
+    "meow": "^9.0.0",
+    "lines-and-columns": "^1.2.4",
+    "mdast-util-to-markdown": "^0.6.5",
+    "minimist-options": "^4.1.0",
+    "micromark": "^2.11.4",
+    "ms": "^2.1.2",
+    "minimist": "^1.2.7",
+    "normalize-range": "^0.1.2",
+    "normalize-package-data": "^3.0.3",
+    "min-indent": "^1.0.1",
+    "once": "^1.4.0",
+    "natural-compare": "^1.4.0",
+    "minimatch": "^3.1.2",
+    "p-limit": "^2.3.0",
+    "p-locate": "^4.1.0",
+    "parent-module": "^1.0.1",
+    "p-try": "^2.2.0",
+    "num2fraction": "^1.2.2",
+    "parse-json": "^5.2.0",
+    "path-exists": "^4.0.0",
+    "optionator": "^0.9.1",
+    "path-is-absolute": "^1.0.1",
+    "parse-entities": "^2.0.0",
+    "node-releases": "^2.0.6",
+    "path-key": "^3.1.1",
+    "picomatch": "^2.3.1",
+    "picocolors": "^0.2.1",
+    "path-type": "^4.0.0",
+    "postcss-less": "^3.1.4",
+    "postcss": "^7.0.39",
+    "postcss-media-query-parser": "^0.2.3",
+    "normalize-selector": "^0.2.0",
+    "postcss-resolve-nested-selector": "^0.1.1",
+    "postcss-html": "^0.36.0",
+    "path-parse": "^1.0.7",
+    "postcss-sass": "^0.4.4",
+    "postcss-safe-parser": "^4.0.2",
+    "punycode": "^2.1.1",
+    "postcss-selector-parser": "^6.0.11",
+    "postcss-scss": "^2.1.1",
+    "quick-lru": "^4.0.1",
+    "postcss-value-parser": "^4.2.0",
+    "queue-microtask": "^1.2.3",
+    "redent": "^3.0.0",
+    "prelude-ls": "^1.2.1",
+    "read-pkg-up": "^7.0.1",
+    "regexpp": "^3.2.0",
+    "repeat-string": "^1.6.1",
+    "postcss-syntax": "^0.36.2",
+    "remark-stringify": "^9.0.1",
+    "resolve-from": "^5.0.0",
+    "require-from-string": "^2.0.2",
+    "remark-parse": "^9.0.0",
+    "remark": "^13.0.0",
+    "run-parallel": "^1.2.0",
+    "readable-stream": "^3.6.0",
+    "rimraf": "^3.0.2",
+    "safe-buffer": "^5.2.1",
+    "resolve": "^1.22.1",
+    "reusify": "^1.0.4",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "slash": "^3.0.0",
+    "read-pkg": "^5.2.0",
+    "source-map": "^0.6.1",
+    "slice-ansi": "^4.0.0",
+    "signal-exit": "^3.0.7",
+    "spdx-license-ids": "^3.0.12",
+    "semver": "^6.3.0",
+    "spdx-correct": "^3.1.1",
+    "string-width": "^4.2.3",
+    "spdx-expression-parse": "^3.0.1",
+    "strip-indent": "^3.0.0",
+    "style-search": "^0.1.0",
+    "stylelint-config-recommended": "^4.0.0",
+    "sugarss": "^2.0.0",
+    "strip-json-comments": "^3.1.1",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "string_decoder": "^1.3.0",
+    "spdx-exceptions": "^2.3.0",
+    "strip-ansi": "^6.0.1",
+    "specificity": "^0.4.1",
+    "to-fast-properties": "^2.0.0",
+    "text-table": "^0.2.0",
+    "trim-newlines": "^3.0.1",
+    "type-check": "^0.4.0",
+    "svg-tags": "^1.0.0",
+    "trough": "^1.0.5",
+    "supports-color": "^7.2.0",
+    "table": "^6.8.1",
+    "to-regex-range": "^5.0.1",
+    "typedarray-to-buffer": "^3.1.5",
+    "unified": "^9.2.2",
+    "unist-util-is": "^4.1.0",
+    "unist-util-find-all-after": "^3.0.2",
+    "unist-util-stringify-position": "^2.0.3",
+    "v8-compile-cache": "^2.3.0",
+    "validate-npm-package-license": "^3.0.4",
+    "vfile-message": "^2.0.4",
+    "util-deprecate": "^1.0.2",
+    "which": "^1.3.1",
+    "uri-js": "^4.4.1",
+    "word-wrap": "^1.2.3",
+    "wrappy": "^1.0.2",
+    "type-fest": "^0.18.1",
+    "vfile": "^4.2.1",
+    "update-browserslist-db": "^1.0.10",
+    "zwitch": "^1.0.5",
+    "lru-cache": "^6.0.0",
+    "yocto-queue": "^0.1.0",
+    "yaml": "^1.10.2",
+    "yallist": "^4.0.0",
+    "yargs-parser": "^20.2.9",
+    "write-file-atomic": "^3.0.3"
+  },
+  "description": ""
 }
