Build: Create a single page app

--- a/package.json
+++ b/package.json
@@ -276,5 +276,5 @@
     "yargs-parser": "^20.2.9",
     "write-file-atomic": "^3.0.3"
   },
-  "description": ""
+  "description": "<a name=\"readme-top\"></a>"
 }
